# app/Models/Position.php
@@ -7,12 +7,14 @@ use Illuminate\Database\Eloquent\Model;
 class Position extends Model
 {
     protected $fillable = [
-        'lat',
-        'lng',
-        'vitesse',
-        'direction',
-        'satellites',
-        'batterie',
-        'sos',
+        'trackable_id', 'trackable_type',
+        'lat', 'lng', 'vitesse', 'direction',
+        'satellites', 'batterie', 'sos',
     ];
+
+    // Relation polymorphe : cette position appartient soit à un User, soit à un Enfant
+    public function trackable()
+    {
+        return $this->morphTo();
+    }
 }
